# nestegg

./: .gitignore  pyproject.toml
.github/workflows/: build-and-push.yml  deploy-ecs.yml
backend/: .dockerignore  Dockerfile
backend/app/: main.py
frontend/: .dockerignore  Dockerfile  index.html
infra/: backend.tf  ecr.tf  ecs-backend.tf  ecs-cluster.tf  iam-oidc.tf  iam.tf  locals.tf  logs.tf  main.tf  networking.tf  outputs.tf  state_resources.tf  variables.tf
tests/: test_health.py
