[project]
name = "nestegg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Justin Castillo", email = "justincastilloust@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = ["fastapi>=0.116.1", "uvicorn>=0.35.0"]

[project.scripts]
nestegg = "nestegg:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
[tool.pytest.ini_options]
